fix: title padding on small devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -126,6 +126,10 @@ img {
         font-size: 1rem;
     }
 
+    header {
+        padding: 10px;
+    }
+
     h1 {
         font-size: 1.5rem;
     }
@@ -145,7 +149,7 @@ img {
 
     .hands {
         margin-top: 2%;
-        margin-bottom: 5%;
+        margin-bottom: 2%;
     }
 
     .hand {
